// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Table Loading 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <table
    className="TableSkeleton__StyledSkeleton-yfxmne-0 fzGijK"
  >
    <thead>
      <tr>
        <th>
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
            height="10px"
            width="100%"
          />
        </th>
        <th>
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
            height="10px"
            width="100%"
          />
        </th>
        <th>
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
            height="10px"
            width="100%"
          />
        </th>
        <th>
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
            height="10px"
            width="100%"
          />
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
            height="10px"
            width="100%"
          />
        </td>
        <td>
          <div
            className="TableSkeleton__StyledSplit-yfxmne-1 bdEPFj"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
              height="10px"
              width="100%"
            />
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
              height="10px"
              width="100%"
            />
          </div>
        </td>
        <td>
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
            height="10px"
            width="100%"
          />
        </td>
        <td>
          <div
            className="TableSkeleton__StyledSplit-yfxmne-1 bdEPFj"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
              height="10px"
              width="100%"
            />
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
              height="10px"
              width="100%"
            />
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
            height="10px"
            width="100%"
          />
        </td>
        <td>
          <div
            className="TableSkeleton__StyledSplit-yfxmne-1 bdEPFj"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
              height="10px"
              width="100%"
            />
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
              height="10px"
              width="100%"
            />
          </div>
        </td>
        <td>
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
            height="10px"
            width="100%"
          />
        </td>
        <td>
          <div
            className="TableSkeleton__StyledSplit-yfxmne-1 bdEPFj"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
              height="10px"
              width="100%"
            />
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
              height="10px"
              width="100%"
            />
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
            height="10px"
            width="100%"
          />
        </td>
        <td>
          <div
            className="TableSkeleton__StyledSplit-yfxmne-1 bdEPFj"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
              height="10px"
              width="100%"
            />
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
              height="10px"
              width="100%"
            />
          </div>
        </td>
        <td>
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
            height="10px"
            width="100%"
          />
        </td>
        <td>
          <div
            className="TableSkeleton__StyledSplit-yfxmne-1 bdEPFj"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
              height="10px"
              width="100%"
            />
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
              height="10px"
              width="100%"
            />
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
            height="10px"
            width="100%"
          />
        </td>
        <td>
          <div
            className="TableSkeleton__StyledSplit-yfxmne-1 bdEPFj"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
              height="10px"
              width="100%"
            />
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
              height="10px"
              width="100%"
            />
          </div>
        </td>
        <td>
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
            height="10px"
            width="100%"
          />
        </td>
        <td>
          <div
            className="TableSkeleton__StyledSplit-yfxmne-1 bdEPFj"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
              height="10px"
              width="100%"
            />
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 cYVeeq"
              height="10px"
              width="100%"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Table Normal 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Table__StyledContainer-sc-188duoa-0 TOtxt"
  >
    <div
      style={
        Object {
          "height": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Table Small 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Table__StyledContainer-sc-188duoa-0 ifntAC"
  >
    <div
      style={
        Object {
          "height": "100%",
        }
      }
    />
  </div>
</div>
`;
